force-app/main/default/objects/Apex_Error_Log__c/Apex_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Custom Object used to store all the errors in exception blocks along with system.debug statements. Mostly useful in case of triggers, batch classes etc.</description>
    <label>Apex Error Log</label>
    <nameField>
        <label>Apex Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Errors Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>