force-app/main/default/objects/Apex_Error_Log__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>Name of the application</description>
    <label>Application Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>