force-app/main/default/objects/Apex_Error_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the Class or Component or File or Reference from where the error or exception reported.</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>