force-app/main/default/objects/Apex_Error_Log__c/fields/Duplicate_Error__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Error</label>
    <type>Checkbox</type>
</CustomField>