force-app/main/default/objects/Apex_Error_Log__c/fields/Error_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Line_Number__c</fullName>
    <description>Line Number from where the exception was thrown.</description>
    <label>Error Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>