force-app/main/default/objects/Apex_Error_Log__c/fields/Error_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Number__c</fullName>
    <displayFormat>AEN-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Error Number</label>
    <type>AutoNumber</type>
</CustomField>