force-app/main/default/objects/Apex_Error_Log__c/fields/Error_Severity__c.field-meta.xml
<CustomField>
    <fullName>Error_Severity__c</fullName>
    <description>Error Serverity</description>
    <label>Error Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Cosmetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>