force-app/main/default/objects/Apex_Error_Log__c/fields/Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Trace__c</fullName>
    <description>The Error Stack Trace</description>
    <label>Error Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>