force-app/main/default/objects/Apex_Error_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Exception Type caught in the catch block</description>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>