force-app/main/default/objects/Apex_Error_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Name of the Function or Method from where the error or exception reported.</description>
    <label>Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>