force-app/main/default/objects/Apex_Error_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Name of the object associated with error reported.</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>