force-app/main/default/objects/Apex_Error_Log__c/fields/Unique_Error__c.field-meta.xml
<CustomField>
    <fullName>Unique_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Error</label>
    <type>Checkbox</type>
</CustomField>