force-app/main/default/objects/Apex_Error_Log__c/listViews/Apex_Error_Log_Week.listView-meta.xml
<ListView>
    <fullName>Apex_Error_Log_Week</fullName>
    <columns>NAME</columns>
    <columns>Application_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Severity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Apex Error Log Week</label>
</ListView>